--- a/blog/templates/add-post.html
+++ b/blog/templates/add-post.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
+{% block title %}Create a New Blog Entry!{% endblock title %}
+
 {% block content %}
 <h1>Add Post...</h1>
 <br/><br/>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-secondary">Post</button>
-</form>
+<div class="form-group">
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-secondary">Post</button>
+    </form>
+</div>
 
 
 {% endblock %}
