--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -24,13 +24,26 @@
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="{% url 'add-post' %}">Add Post <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'add-post' %}">Add Post <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'logout' %}">Sign Out<span class="sr-only">(current)</span></a>
+            </li>
+          {% else %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'register' %}">Sign Up<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'login' %}">Sign In<span class="sr-only">(current)</span></a>
+            </li>
+          {% endif %}
         </ul>
+        <ul class="navbar-nav ml-auto"></ul>
+        {% if user.is_authenticated %}
+            <p class="text-white">Welcome {{ user.username}}</p>
+        {% endif %}
       </div>
     </nav>
     <br/>
