--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -5,10 +5,18 @@
 <h1>Post</h1>
 
 <ul>
-{% for post in object_list %}
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
-    {{ post.author.last_name }} <br/>
-    {{ post.body }}</li>
-{% endfor %}
+    {% for post in object_list %}
+        <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
+            {{ post.author.last_name }} - 
+            {{ post.created_date }}
+            {% if user.is_authenticated %}
+                <a href="{% url 'update-post' post.pk %}"><u>[Edit</u></a>
+                <a href="{% url 'delete-post' post.pk %}"><u>Delete]</u></a> 
+            {% endif %}
+        <br/>
+            {{ post.body|slice:":300"|safe }}
+        </li>
+        <br/>
+    {% endfor %}
 </ul>
 {% endblock %}
