--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -17,7 +17,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">KYS</a>
+      <a class="navbar-brand" href="{% url 'home' %}">¯\_(ツ)_/¯</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,7 +42,7 @@
         </ul>
         <ul class="navbar-nav ml-auto"></ul>
         {% if user.is_authenticated %}
-            <p class="text-white">Welcome {{ user.username}}</p>
+            <p class="text-white">Welcome <u>{{ user.username}}</u></p>
         {% endif %}
       </div>
     </nav>
