--- a/blog/templates/add-post.html
+++ b/blog/templates/add-post.html
@@ -7,8 +7,9 @@
 <br/><br/>
 
 <div class="form-group">
-    <form method="post">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ form.media }}
         {{ form.as_p }}
         <button class="btn btn-secondary">Post</button>
     </form>
