--- a/blog/templates/article-detail.html
+++ b/blog/templates/article-detail.html
@@ -9,8 +9,10 @@
     <small>By: {{ post.author.first_name }}
         {{ post.author.last_name}} - {{ post.created_date }}
         {% if user.is_authenticated %}
-        <a href="{% url 'update-post' post.pk %}"><u>Edit</u></a>
-        <a href="{% url 'delete-post' post.pk %}"><u>Delete</u></a>
+            {% if user.id == post.author.id %}
+                <a href="{% url 'update-post' post.pk %}"><u>Edit</u></a>
+                <a href="{% url 'delete-post' post.pk %}"><u>Delete</u></a>
+            {% endif %}
         {% endif %}
     </small>
     <br/>
