--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -9,11 +9,13 @@
     <div class="card" style="width: 90%;">
         <div class="card-body">
             <h5 class="card-title"><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a></h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ post.author.first_name }}{{ post.author.last_name }} - {{ post.created_date }}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{ post.author.first_name }} {{ post.author.last_name }} - {{ post.created_date }}</h6>
             <p class="card-text">{{ post.body|slice:":258"|safe }}</p>
             {% if user.is_authenticated %}
-            <a class="btn btn-outline-dark" href="{% url 'update-post' post.pk %}" class="card-link">Edit</a>
-            <a class="btn btn-outline-danger" href="{% url 'delete-post' post.pk %}" class="card-link">Delete</a>
+                {% if user.id == post.author.id %}
+                    <a class="btn btn-outline-dark" href="{% url 'update-post' post.pk %}" class="card-link">Edit</a>
+                    <a class="btn btn-outline-danger" href="{% url 'delete-post' post.pk %}" class="card-link">Delete</a>
+                {% endif %}
             {% endif %}
         </div>
     </div>
