Fix upload images

--- a/blog/templates/article-detail.html
+++ b/blog/templates/article-detail.html
@@ -17,8 +17,12 @@
     </small>
     <br/>
     <hr>
-{{ post.body|safe }}
+    {{ post.body|safe }}
+    {% if post.image %}
+        <br/><br/>
+        <img src="{{ post.image.url }}">
 
-<br/>
-<a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
+        <br/> <br/>
+    {% endif %}
+    <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 {% endblock %}
