--- a/blog/templates/update-post.html
+++ b/blog/templates/update-post.html
@@ -7,9 +7,8 @@
     <br/><br/>
     
     <div class="form-group">
-        <form method="post">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.media }}
             {{ form.as_p }}
             <button class="btn btn-secondary">Save</button>
         </form>
