Fix reply issue

--- a/blog/templates/add-comment.html
+++ b/blog/templates/add-comment.html
@@ -7,7 +7,8 @@
 <br/><br/>
 
 <div class="form-group">
-    <form method="POST">
+    <form method="POST" >
+        <input type="hidden" name="comment_id" value="{{ comment.id }}">
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-secondary">Add Comment</button>
